Anchors & bug-fixes
- HTML-FIle does now contain anchors for better navigation
-  new error message when no file is given
- style for anchors is invisible
- older commit: upload for excel lists is at 100 words to prevent error
in trainer

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,11 @@
 	padding-bottom: 50px;
 }
 
+a[name] {
+	/* Alle Anker ausblenden */
+	visibility: hidden;
+}
+
 form input {
 	left: 400px;
 	background-color: beige;
